Adds some meta information

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Campaign Page with Dark Mode</title>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="campaign, influencer, nowfluence, brand, advertisement">
+    <meta name="description" content="Platform to connect brands and influencers">
+    <meta name="publisher" content="nowfluence">
+    <title>Campaign Page | nowfluence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       // Configure Tailwind for dark mode class strategy
