Wraps sections in main

--- a/index.html
+++ b/index.html
@@ -44,142 +44,144 @@
       </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section
-      class="bg-sky-100 dark:bg-gray-800 py-12 transition-colors duration-500"
-    >
-      <div
-        class="container mx-auto md:px-12 px-8 flex flex-col-reverse lg:flex-row items-center gap-8"
+    <main>
+    <!-- Campaign Overview Section -->
+      <section
+        class="bg-sky-100 dark:bg-gray-800 py-12 transition-colors duration-500"
       >
-        <div class="lg:w-2/5">
-          <p class="text-sm uppercase text-gray-500 dark:text-gray-400 mb-2">
-            Brand Name
-          </p>
-          <h1 class="text-3xl font-bold mb-4">Campaign Title Here</h1>
-          <p class="text-gray-600 dark:text-gray-300 mb-6 text-justify">
-            Lorem ipsum dolor amet, consectetur adipiscing elit. Lacus fermentum
-            odio phasellus cras ad erat parturient. Class at et lorem quam ac
-            inceptos netus fermentum vehicula? Duis libero penatibus ante
-            ultricies mattis. Varius dui placerat egestas ex rhoncus per et est.
-            Nisi maecenas curabitur, ultricies auctor bibendum pretium
-            facilisis. Nascetur malesuada sed suscipit consequat tempus molestie
-            turpis posuere.
-          </p>
-          <p class="text-gray-600 dark:text-gray-300 mb-6 text-justify">
-            Habitant tortor integer dui blandit leo aenean. Metus taciti
-            praesent malesuada orci vitae tempus vehicula sollicitudin. Morbi
-            pharetra vestibulum metus; dui efficitur magnis quis class. Finibus
-            auctor maximus, donec rutrum condimentum curabitur commodo?
-            Himenaeos congue nam per sollicitudin maximus ex nostra enim
-            ridiculus. Ipsum litora elit mi aenean vitae parturient tempor
-            aliquam tempor. Justo maximus cursus accumsan at aenean penatibus
-            maecenas.
-          </p>
-          <div class="flex items-center space-x-4">
-            <p class="text-xs text-gray-600 dark:text-gray-400 font-bold">
-              Requested Start Date: MM/DD/YYYY
+        <div
+          class="container mx-auto md:px-12 px-8 flex flex-col-reverse lg:flex-row items-center gap-8"
+        >
+          <div class="lg:w-2/5">
+            <p class="text-sm uppercase text-gray-500 dark:text-gray-400 mb-2">
+              Brand Name
             </p>
-            <button
-              class="bg-white text-xs min-w-55 h-6 flex items-center justify-center dark:bg-gray-700 border border-gray-400 dark:border-gray-600 text-gray-800 dark:text-gray-100 font-semibold py-2 px-4 rounded hover:bg-gray-100 dark:hover:bg-gray-600"
-            >
-              View Campaign Brief
-            </button>
+            <h1 class="text-3xl font-bold mb-4">Campaign Title Here</h1>
+            <p class="text-gray-600 dark:text-gray-300 mb-6 text-justify">
+              Lorem ipsum dolor amet, consectetur adipiscing elit. Lacus fermentum
+              odio phasellus cras ad erat parturient. Class at et lorem quam ac
+              inceptos netus fermentum vehicula? Duis libero penatibus ante
+              ultricies mattis. Varius dui placerat egestas ex rhoncus per et est.
+              Nisi maecenas curabitur, ultricies auctor bibendum pretium
+              facilisis. Nascetur malesuada sed suscipit consequat tempus molestie
+              turpis posuere.
+            </p>
+            <p class="text-gray-600 dark:text-gray-300 mb-6 text-justify">
+              Habitant tortor integer dui blandit leo aenean. Metus taciti
+              praesent malesuada orci vitae tempus vehicula sollicitudin. Morbi
+              pharetra vestibulum metus; dui efficitur magnis quis class. Finibus
+              auctor maximus, donec rutrum condimentum curabitur commodo?
+              Himenaeos congue nam per sollicitudin maximus ex nostra enim
+              ridiculus. Ipsum litora elit mi aenean vitae parturient tempor
+              aliquam tempor. Justo maximus cursus accumsan at aenean penatibus
+              maecenas.
+            </p>
+            <div class="flex items-center space-x-4">
+              <p class="text-xs text-gray-600 dark:text-gray-400 font-bold">
+                Requested Start Date: MM/DD/YYYY
+              </p>
+              <button
+                class="bg-white text-xs min-w-55 h-6 flex items-center justify-center dark:bg-gray-700 border border-gray-400 dark:border-gray-600 text-gray-800 dark:text-gray-100 font-semibold py-2 px-4 rounded hover:bg-gray-100 dark:hover:bg-gray-600"
+              >
+                View Campaign Brief
+              </button>
+            </div>
           </div>
-        </div>
 
-        <div class="lg:w-3/5 flex justify-center">
-          <img
-            src="./images/fitness.png"
-            alt="Gym Fitness Campaign"
-            class="rounded-2xl shadow-lg max-h-[550px] aspect-auto"
-          />
-        </div>
-      </div>
-    </section>
-
-    <!-- Deliverables Section -->
-    <section
-      class="bg-gray-50 dark:bg-gray-700 py-12 transition-colors duration-500"
-    >
-      <div class="container mx-auto md:px-12 px-8">
-        <h2 class="text-2xl font-bold mb-8">Deliverables Requested</h2>
-
-        <div class="flex flex-col items-center justify-left space-y-6">
-          <!-- Instagram -->
-          <div class="flex items-center justify-start gap-4">
+          <div class="lg:w-3/5 flex justify-center">
             <img
-              src="./images/instagram.png"
-              alt="Instagram"
-              class="w-12"
+              src="./images/fitness.png"
+              alt="Gym Fitness Campaign"
+              class="rounded-2xl shadow-lg max-h-[550px] aspect-auto"
             />
-            <h3 class="bg-gradient-to-r from-fuchsia-700 to-yellow-400 bg-clip-text text-transparent font-bold w-20">
-                Instagram
-            </h3>
-            <p class="text-gray-600 dark:text-gray-300 text-md max-w-[300px]">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              quis nisl feugiat.
-            </p>
           </div>
+        </div>
+      </section>
 
-          <!-- TikTok -->
-          <div class="flex items-center gap-4">
-            <img src="./images/tiktok.png" alt="TikTok" class="w-11" />
-            <h3 class="text-black dark:text-black font-bold w-20">
-                Tiktok
-            </h3>
-            <div>
+      <!-- Deliverables Section -->
+      <section
+        class="bg-gray-50 dark:bg-gray-700 py-12 transition-colors duration-500"
+      >
+        <div class="container mx-auto md:px-12 px-8">
+          <h2 class="text-2xl font-bold mb-8">Deliverables Requested</h2>
+
+          <div class="flex flex-col items-center justify-left space-y-6">
+            <!-- Instagram -->
+            <div class="flex items-center justify-start gap-4">
+              <img
+                src="./images/instagram.png"
+                alt="Instagram"
+                class="w-12"
+              />
+              <h3 class="bg-gradient-to-r from-fuchsia-700 to-yellow-400 bg-clip-text text-transparent font-bold w-20">
+                  Instagram
+              </h3>
               <p class="text-gray-600 dark:text-gray-300 text-md max-w-[300px]">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                 quis nisl feugiat.
               </p>
             </div>
-          </div>
 
-          <div class="flex items-center gap-4">
-            <img src="./images/youtube.png" alt="YouTube" class="w-12" />
-            <h3 class="text-red-600 dark:text-red-600 font-bold w-20">
-              Youtube
-            </h3>
-            <di v>
-              <p class="text-gray-600 dark:text-gray-300 text-md max-w-[300px]">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </p>
+            <!-- TikTok -->
+            <div class="flex items-center gap-4">
+              <img src="./images/tiktok.png" alt="TikTok" class="w-11" />
+              <h3 class="text-black dark:text-black font-bold w-20">
+                  Tiktok
+              </h3>
+              <div>
+                <p class="text-gray-600 dark:text-gray-300 text-md max-w-[300px]">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                  quis nisl feugiat.
+                </p>
+              </div>
+            </div>
+
+            <div class="flex items-center gap-4">
+              <img src="./images/youtube.png" alt="YouTube" class="w-12" />
+              <h3 class="text-red-600 dark:text-red-600 font-bold w-20">
+                Youtube
+              </h3>
+              <di v>
+                <p class="text-gray-600 dark:text-gray-300 text-md max-w-[300px]">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Additional Information Section -->
-    <section
-      class="bg-white dark:bg-gray-800 py-12 transition-colors duration-500"
-    >
-      <div class="container mx-auto md:px-12 px-8">
-        <h2 class="text-2xl font-bold mb-4">Additional Information</h2>
-        <p class="text-gray-600 dark:text-gray-300 mb-8">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Individuals
-          often find themselves driven by a desire to push boundaries, unlocking
-          new potential within themselves. Sed do eiusmod tempor incididunt ut
-          labore et dolore manga aliqua - a phrase that reminds us of the
-          diligence and effort required to achieve greatness
-        </p>
-
-        <!-- Call to Action -->
-        <div class="text-center">
-          <h3 class="text-3xl font-bold text-teal-900 dark:text-white mb-4">
-            Interested in this Campaign?
-          </h3>
-          <p class="text-sm mb-6 font-bold">
-            Apply here to participate in the campaign:
+      <!-- Additional Information Section -->
+      <section
+        class="bg-white dark:bg-gray-800 py-12 transition-colors duration-500"
+      >
+        <div class="container mx-auto md:px-12 px-8">
+          <h2 class="text-2xl font-bold mb-4">Additional Information</h2>
+          <p class="text-gray-600 dark:text-gray-300 mb-8">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Individuals
+            often find themselves driven by a desire to push boundaries, unlocking
+            new potential within themselves. Sed do eiusmod tempor incididunt ut
+            labore et dolore manga aliqua - a phrase that reminds us of the
+            diligence and effort required to achieve greatness
           </p>
-          <button
-            class="bg-gradient-to-r from-teal-500 to-cyan-400 dark:bg-teal-700 dark:to-cyan-600 hover:bg-teal-500 dark:hover:bg-teal-500 text-white font-bold py-3 px-12 rounded-full transition"
-          >
-            Apply
-          </button>
+
+          <!-- Call to Action -->
+          <div class="text-center">
+            <h3 class="text-3xl font-bold text-teal-900 dark:text-white mb-4">
+              Interested in this Campaign?
+            </h3>
+            <p class="text-sm mb-6 font-bold">
+              Apply here to participate in the campaign:
+            </p>
+            <button
+              class="bg-gradient-to-r from-teal-500 to-cyan-400 dark:bg-teal-700 dark:to-cyan-600 hover:bg-teal-500 dark:hover:bg-teal-500 text-white font-bold py-3 px-12 rounded-full transition"
+            >
+              Apply
+            </button>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!-- Footer -->
     <footer class="text-center py-6 text-gray-500 dark:text-gray-400 text-sm">
